Try and fix seo meta, add adtl files

--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 title: Page not found
 layout: nil
+sitemap: false
 ---
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/Article" class="h-100">
